fix results for more than one selected app